# cpp-starter-kit

./: .clang-format  .clang-tidy  .envrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  TODO.md  activate.sh  build.sh  cmake_pc_hooks.toml  conanfile.py  init.sh  install.sh  pyproject.toml  run.sh  setup-alpine.sh  setup.sh  starterkit.code-workspace  test.sh  zig.patch
.devcontainer/: Dockerfile  Dockerfile.dockerignore  devcontainer.json
.github/workflows/: ci__cpp.yaml  ci__pre_commit.yaml
cli/: CMakeLists.txt
cli/src/: main-cli.cpp
cmake/: tools.cmake
env/: _build_env_vars.sh  _utils.sh  env_vars.sh  requirements.txt  setup.sh
env/cmake/: CPM.cmake  ColorFormatting.cmake  helpers.cmake  tools.cmake
env/profiles/: base.profile  clang-tidy.profile  clang.profile  emscripten.profile  native.profile  wasm.profile
env/scripts/: _install_uv.sh
env/scripts/private/: _build_env_vars.sh  _env_vars_file.sh  _utils.sh
include/starterkit/: starterkit.h
scripts/: checkout_pr.sh  create_upstream.sh  git_scripts.py  pull_master.sh  rebase_master.sh
src/: CMakeLists.txt  config.h.in  starterkit.cpp  version.h.in
tests/: CMakeLists.txt
tests/src/: starterkit-test.cpp
